vgg and activation maps

--- a/utils.ipynb
+++ b/utils.ipynb
@@ -62,6 +62,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "def mkdir(path):\n",
+    "  if not os.path.exists(path):\n",
+    "    os.makedirs(path)\n",
+    "\n",
+    "def link(src, dst):\n",
+    "  if not os.path.exists(dst):\n",
+    "    os.symlink(src, dst, target_is_directory=True)\n",
+    "\n",
+    "FRUTIS_ORIGINAL_PATH = './assets/fruits-360'\n",
+    "FRUITS_SUBSET_PATH = './assets/fruits-360-small'\n",
+    "\n",
+    "mkdir('./assets/fruits-360')\n",
+    "\n",
+    "classes = [\n",
+    "  'Apple Golden 1',\n",
+    "  'Avocado',\n",
+    "  'Lemon',\n",
+    "  'Mango',\n",
+    "  'Kiwi',\n",
+    "  'Banana',\n",
+    "  'Strawberry',\n",
+    "  'Raspberry'\n",
+    "]\n",
+    "\n",
+    "train_path_from = os.path.abspath(f'{FRUTIS_ORIGINAL_PATH}/Training')\n",
+    "valid_path_from = os.path.abspath(f'{FRUTIS_ORIGINAL_PATH}/Test')\n",
+    "\n",
+    "train_path_to = os.path.abspath(f'{FRUITS_SUBSET_PATH}/Training')\n",
+    "valid_path_to = os.path.abspath(f'{FRUITS_SUBSET_PATH}/Test')\n",
+    "\n",
+    "mkdir(train_path_to)\n",
+    "mkdir(valid_path_to)\n",
+    "\n",
+    "\n",
+    "for c in classes:\n",
+    "  link(train_path_from + '/' + c, train_path_to + '/' + c)\n",
+    "  link(valid_path_from + '/' + c, valid_path_to + '/' + c)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
